--- a/components/TimerButton/styles.module.css
+++ b/components/TimerButton/styles.module.css
@@ -9,6 +9,8 @@
     transition: all ease 0.2s;
 }
 
-.container:hover{
-    filter: opacity(0.9);
+@media (hover: hover) {
+    .container:hover {
+        filter: opacity(0.9);
+    }
 }
